--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -419,6 +419,7 @@ a:hover {
 	padding: 5px 10px 5px 10px;
 	border: 2px solid #DACDCD;
 	border-radius: 5px;
+	box-shadow: 5px 5px 10px #cccccc;
 	background:#f3f3f2;
     *width: 14.476723040552828%;
   }
